<resources>
    <string name="app_name">Motorbike Statistics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_search_devices">Search For Devices</string>
    <string name="stop_search_devices">Stop Device Search</string>
    <string name="show_orientation">Show Orientation</string>
    <string name="show_map">Show Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
