<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="Bluetooth Devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:id="@+id/pairdevice_status" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pairdevice_status"
        android:layout_alignLeft="@+id/pairdevice_status"
        android:layout_alignStart="@+id/pairdevice_status"
        android:id="@+id/pairdevice_deviceList"
        android:layout_above="@+id/pairdevice_search"
        android:headerDividersEnabled="false" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pairdevice_search"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textOff="@string/start_search_devices"
        android:textOn="@string/stop_search_devices" />

</RelativeLayout>